--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ alembic = "^1.13.2"
 fastapi = {extras = ["all"], version = "^0.114.2"}
 sqlalchemy = "^2.0.34"
 psycopg2 = "^2.9.9"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
