--- a/app/alembic.ini
+++ b/app/alembic.ini
@@ -1,8 +1,8 @@
 [alembic]
 script_location = alembic
 prepend_sys_path = .
-version_path_separator = os  # Use os.pathsep. Default configuration used for new projects.
-sqlalchemy.url = postgresql+psycopg2://postgres:456321@localhost/db_zit
+version_path_separator = os  #
+sqlalchemy.url = postgresql+psycopg2://postgres:456321@localhost:5432/db_zit
 
 [post_write_hooks]
 
