--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_NAME = "db_zit"
-USER = "postgres"
-PASSWORD = "456321"
+POSTGRES_DB = "db_zit"
+POSTGRES_USER = "postgres"
+POSTGRES_PASSWORD = "456321"
