--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,19 @@
-version: '3.8'
-
 services:
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      - .env
     ports:
       - "8000:8000"
     depends_on:
       - db
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
+
 
   db:
-    image: postgres:13
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: zit
+    image: postgres:latest
+    env_file:
+      - .env
     ports:
       - "5432:5432"
