--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
       - "8000:8000"
     depends_on:
       - db
-
+    entrypoint: >
+      sh -c "while ! nc -z db 5432; do sleep 0.1; done; poetry run alembic upgrade head; poetry run uvicorn app.main:app --host 0.0.0.0 --port 8000"
 
   db:
     image: postgres:latest
