--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,11 @@
 services:
+  db:
+    image: postgres:latest
+    env_file:
+      - .env
+    ports:
+      - "5432:5432"
+
   web:
     build:
       context: .
@@ -9,12 +16,5 @@ services:
       - "8000:8000"
     depends_on:
       - db
-    entrypoint: >
-      sh -c "while ! nc -z db 5432; do sleep 0.1; done; poetry run alembic upgrade head; poetry run uvicorn app.main:app --host 0.0.0.0 --port 8000"
-
-  db:
-    image: postgres:latest
-    env_file:
-      - .env
-    ports:
-      - "5432:5432"
+    command: >
+      sh -c "poetry run alembic upgrade head; poetry run uvicorn app.main:app --host 0.0.0.0 --port 8000"
