--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,4 +17,5 @@ services:
     depends_on:
       - db
     command: >
-      sh -c "poetry run alembic upgrade head; poetry run uvicorn app.main:app --host 0.0.0.0 --port 8000"
+      sh -c "/usr/local/bin/wait-for-it.sh db:5432 --timeout=30 -- poetry run alembic upgrade head &&
+      poetry run uvicorn app.main:app --host 0.0.0.0 --port 8000"
