--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ psycopg2 = "^2.9.9"
 python-dotenv = "^1.0.1"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.3"
+pytest-asyncio = "^0.24.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
