--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = {extras = ["all"], version = "^0.114.2"}
 sqlalchemy = "^2.0.34"
 psycopg2 = "^2.9.9"
 python-dotenv = "^1.0.1"
+httpx = "^0.27.2"
 
 
 [tool.poetry.group.dev.dependencies]
