--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,12 @@ fastapi = {extras = ["all"], version = "^0.114.2"}
 sqlalchemy = "^2.0.34"
 psycopg2 = "^2.9.9"
 python-dotenv = "^1.0.1"
-httpx = "^0.27.2"
-
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
 pytest-asyncio = "^0.24.0"
+black = "^24.8.0"
+httpx = "^0.27.2"
 
 [build-system]
 requires = ["poetry-core"]
