--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build:
@@ -32,8 +32,8 @@ jobs:
 
       - name: Run black
         run: |
-          poetry run black --check .  # Проверяет форматирование кода
+          poetry run black --check .
 
       - name: Run tests
         run: |
-          poetry run pytest  # Запускает тесты
+          poetry run pytest
