delete host port

--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,7 @@
 script_location = app/alembic
 prepend_sys_path = .
 version_path_separator = os  #
-sqlalchemy.url = postgresql+psycopg2://postgres:456321@localhost/db_zit
+sqlalchemy.url = postgresql+psycopg2://postgres:456321@/db_zit
 
 [post_write_hooks]
 
