--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,8 @@ jobs:
         run: |
           poetry install
 
-      - name: List test files
-        run: |
-          ls -R
+      - name: Set environment variables
+        run: echo "TESTING=1" >> $GITHUB_ENV
 
       - name: Run black
         run: |
