--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-POSTGRES_DB = "db_zit"
-POSTGRES_USER = "postgres"
-POSTGRES_PASSWORD = "456321"
+POSTGRES_DB = db_zit
+POSTGRES_USER = postgres
+POSTGRES_PASSWORD = 456321
+POSTGRES_HOST = db
+POSTGRES_PORT = 5432
