--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       - .env
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
   web:
     build:
@@ -19,3 +21,6 @@ services:
     command: >
       sh -c "/usr/local/bin/wait-for-it.sh db:5432 --timeout=30 -- poetry run alembic upgrade head &&
       poetry run uvicorn app.main:app --host 0.0.0.0 --port 8000"
+
+volumes:
+  postgres_data:
